--- a/QuizGame.Core/QuizGame.Core.csproj
+++ b/QuizGame.Core/QuizGame.Core.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.29" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\QuizGame.Infrastructure\QuizGame.Infrastructure.csproj" />
   </ItemGroup>
 
